# sweat-hero

./: .env  .gitignore  .gitmodules  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config
.github/workflows/: push.yml  test.yml
contract/: Cargo.toml
contract/src/: api.rs  contract.rs  contract_metadata.rs  event.rs  internal.rs  lib.rs  token.rs  token_metadata.rs
integration-tests/: Cargo.toml
integration-tests/src/: contract_name_interface.rs  happy_flow.rs  lib.rs  prepare.rs  sweat_hero_interface.rs  tests.rs
model/: Cargo.toml
model/src/: contract_metadata.rs  lib.rs  token.rs  token_metadata.rs  token_view.rs  utils.rs
model/src/legs/: legs_metadata.rs  mod.rs  rarity.rs  traits.rs
res/: sweat_hero.wasm
