[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
near-sdk = "4.1.1"
itertools = "0.11.0"
base64 = "0.21.3"
sha256 = "1.3.0"
tokio = { version = "1.33.0" }

integration-trait = { git = "https://github.com/sweatco/integration-trait.git", rev = "2f6fe3ec58f48090c6191364e6843dab526dd309" }
integration-utils = { git = "https://github.com/sweatco/integration-utils.git", rev = "8d51151dab71d08081191209df0b7c527c1c06f1" }
model = { path = "model" }
