[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
fake = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }

model = { workspace = true }
integration-utils = { workspace = true }


dotenv = "0.15.0"

anyhow = "1.0"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
workspaces = "0.7.0"
async-trait = "0.1.71"
